[project]
name = "django-ram"
version = "0.0.1"
authors = [
  { name="Emil van der Westhuizen", email="vdwemil@protonmail.com" },
]
description = "Django rest framework Identity and Access Management."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/vdwemil95/django-ram"
"Bug Tracker" = "https://github.com/vdwemil95/django-ram/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.isort]
atomic = true
extra_standard_library = "types"
multi_line_output = 5
known_third_party = "pytest,_pytest,django,pytz,uritemplate"
known_first_party = "django_ram,tests"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"